<resources>
    <string name="app_name">InstagramClone</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="instagram">Instagram</string>
    <string name="description">Description...</string>
    <string name="user_uploaded_image">user_uploaded_image</string>
    <string name="home">Home</string>
    <string name="heart">Like</string>
    <string name="new_post">New Post</string>
    <string name="user">User</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="post_image">post image</string>
</resources>