<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/itHome"
        android:enabled="true"
        android:icon="@drawable/ic_action_home"
        android:title="@string/home"/>

    <item
        android:id="@+id/itHeart"
        android:enabled="true"
        android:icon="@drawable/ic_action_heart"
        android:title="@string/heart"/>

    <item
        android:id="@+id/itPost"
        android:enabled="true"
        android:icon="@drawable/ic_action_new_post"
        android:title="@string/new_post"/>

<!--    <item-->
<!--        android:id="@+id/itUser"-->
<!--        android:enabled="true"-->
<!--        android:icon="@drawable/ic_action_user"-->
<!--        android:title="@string/user"/>-->
</menu>